--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
+// This is my first website
+<h1 style="text-align: center">All about sweets!</h1>
 
-    <h1>Elizabeth's Site</h1>
+<img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/food/chocolates.png">
+
+<p style="text-align: center">Sweets, sweets, sweets,<br>
+    it's all about sweets.<br>  
+    Next time you eat, remember.<br>
+    Sweets, sweets, sweets,<br>
+    it's all about sweets.
+</p>
