--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <h1 style="text-align: center">All about sweets!</h1>
 
-<img src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/food/chocolates.png">
+<img style="margin: 0 auto" src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/food/chocolates.png">
 
 <p style="text-align: center">Sweets, sweets, sweets,<br>
     it's all about sweets.<br>  
