--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <img style="margin: 0 auto" src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/food/chocolates.png">
 
 <p style="text-align: center">Sweets, sweets, sweets,<br>
-    it's all about sweets.<br>  
+    it's all about <em>sweets!<br></em>  
     Next time you eat, remember.<br>
     Sweets, sweets, sweets,<br>
     it's all about sweets.
