--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 
 <h1 style="text-align: center">All about sweets!</h1>
 
+
+    <h2>Why are sweeties delicious?</h2>
+    <ol>
+        <li>They have sugar inside them</li>
+        <li>Some are chocolaty!</li>
+        <li>They can give you energy.</li>
+    </ol>
+
 <img style="margin: 0 auto" src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/food/chocolates.png">
 
 <p style="text-align: center">Sweets, sweets, sweets,<br>
