--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>They can give you energy.</li>
     </ol>
 
-<img style="margin: 0 auto" src="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/food/chocolates.png">
+<img style="margin: 0 auto" src="/colorful-1284475_1280.jpg">
 
 <p style="text-align: center">Sweets, sweets, sweets,<br>
     it's all about <em>sweets!<br></em>  
