--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>They can give you energy.</li>
     </ol>
 
-<img style="margin: 0 auto" src="colorful-1284475_1280.jpg">
+<img style="margin: 0 auto" src="colorful-1284475_1280.jpg" width="100%">
 
 <p style="text-align: center">Sweets, sweets, sweets,<br>
     it's all about <em>sweets!<br></em>  
