--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-
+<html>
+    <head>
+        <style>
+             body {
+                background-color: rgb(212, 130, 57);
+            }
+        </style>
+    </head>
+<body>
 <h1 style="text-align: center">All about sweets!</h1>
 
 
@@ -17,3 +25,5 @@
     Sweets, sweets, sweets,<br>
     it's all about sweets.
 </p>
+</body>
+</html>
